# Loan-Forecasting

./: .gitignore  Makefile  README.md  app_streamlit.py  demo-config.yaml  pyproject.toml  sample_banking_dataset_large.csv
bank_ml/: __init__.py  cli.py  clustering.py  config.py  data.py  evaluate.py  feature_select_ga.py  models.py  optimize_pso.py  preprocess.py
scripts/: smoke_check.py
tests/: test_cli.py  test_clustering.py  test_feature_select_ga.py  test_preprocess.py
